Fix style of json-editor
Show descriptions underneath fields so they are not truncated

--- a/src/main/less/json_editor.less
+++ b/src/main/less/json_editor.less
@@ -27,7 +27,6 @@
     }
     .form-control {
 
-        display: table;
         width: 100%;
         label, input, p, select {
             display: table-cell !important;
